--- a/AUTHORS
+++ b/AUTHORS
@@ -6,3 +6,4 @@ Alexa Orrico <210@holbertonschool.com>
 Joann Vuong <130@holbertonschool.com> 
 Hezekiah Olushola <ok.hezekiahs@gmail.com>
 Prince Chimelem Azuka <princeazuka99@gmail.com>
+Donnelly Nyagoha Amaitsa <donamaitsa@gmail.com>
